Add landing page

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,13 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/main.css">
-    <title>Document</title>
-</head>
-<body>
-    <<!--Nothing yet, this is where our SPA will go-->>>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/static/css/main.css" />
+        <title>Searching Engine</title>
+        <script
+            defer
+            src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
+            integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
+            crossorigin="anonymous"
+        ></script>
+    </head>
+    <body>
+        <section class="showcase">
+            <div class="video-container">
+                <video src="/static/css/video.mp4" autoplay muted loop></video>
+            </div>
+            <div class="content">
+                <h1>Find your next car</h1>
+            </div>
+        </section>
+
+        <section id="about">
+            <div class="search">
+                <div class="box">
+                    <h3>Maker</h3>
+                    <form class="search-container">
+                        <input
+                            type="text"
+                            id="search-bar"
+                            name="maker"
+                            placeholder=""
+                        />
+                    </form>
+                </div>
+                <div class="box">
+                    <h3>Model</h3>
+                    <form class="search-container">
+                        <input
+                            type="text"
+                            id="search-bar"
+                            name="model"
+                            placeholder=""
+                        />
+                    </form>
+                </div>
+                <div class="box">
+                    <h3>Year</h3>
+                    <form class="search-container">
+                        <input
+                            type="text"
+                            id="search-bar"
+                            name="year"
+                            placeholder=""
+                        />
+                    </form>
+                </div>
+            </div>
+
+            <a href="" class="btn">Search</a>
+
+            <h2>winninghacks-team</h2>
+
+            <div class="social">
+                <a href="https://twitter.com/WinHacksCA" target="_blank"
+                    ><i class="fab fa-twitter fa-2x"></i
+                ></a>
+                <a href="http://facebook.com/WinHacksCA" target="_blank"
+                    ><i class="fab fa-facebook fa-2x"></i
+                ></a>
+                <a
+                    href="https://www.youtube.com/channel/UCMph1_SzSomH2cUF7j_YqUA"
+                    target="_blank"
+                    ><i class="fab fa-youtube fa-2x"></i
+                ></a>
+                <a
+                    href="https://www.linkedin.com/company/winhacks"
+                    target="_blank"
+                    ><i class="fab fa-linkedin fa-2x"></i
+                ></a>
+                <a href="https://instagram.com/winhacksca" target="_blank"
+                    ><i class="fab fa-instagram fa-2x"></i
+                ></a>
+            </div>
+        </section>
+    </body>
 </html>
